--- a/package.json
+++ b/package.json
@@ -1,87 +1,57 @@
 {
-  "name": "aura",
-  "version": "1.0.0",
+  "name": "actions-new",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
+    "dev": "next dev",
     "build": "next build",
-    "dev": "next dev --turbo",
     "start": "next start",
     "lint": "next lint",
-    "lint:fix": "next lint --fix",
-    "lint:i18n": "eslint --ext .json --format node_modules/eslint-plugin-i18n-json/formatter.js src/locale/messages",
-    "format": "prettier --write \"**/*.{js,ts,tsx,mdx}\" --cache",
-    "check": "prettier --check \"**/*.{js,ts,tsx,mdx}\" --cache",
-    "prepare": "husky",
-    "commit": "git-cz",
-    "supabase:generate": "supabase gen types typescript --local --schema public > src/schemas/supabase.ts ",
-    "supabase": "supabase"
+    "db:generate": "drizzle-kit generate:pg --config drizzle.config.ts",
+    "db:push": "drizzle-kit push:pg --config drizzle.config.ts"
   },
   "dependencies": {
-    "@ant-design/cssinjs": "^1.20.0",
-    "@supabase/ssr": "^0.3.0",
-    "@supabase/supabase-js": "^2.42.7",
-    "@tanstack/react-query": "^5.35.1",
-    "@types/mapbox-gl": "^3.1.0",
-    "antd": "^5.16.4",
-    "antd-img-crop": "^4.22.0",
-    "antd-zod": "^5.1.0",
-    "axios": "^1.7.2",
-    "client-only": "^0.0.1",
-    "clsx": "^1.2.1",
-    "dayjs": "^1.11.10",
-    "jiti": "^1.21.0",
-    "lodash": "^4.17.21",
-    "lucide-react": "^0.244.0",
-    "mapbox-gl": "^3.4.0",
-    "next": "14.2.2",
-    "next-intl": "3.11.3",
-    "next-themes": "^0.3.0",
-    "react": "18.2.0",
-    "react-big-calendar": "1.12.2",
-    "react-dom": "18.2.0",
-    "react-map-gl": "^7.1.7",
-    "server-only": "^0.0.1",
-    "tailwind-merge": "^1.14.0",
-    "type-fest": "^4.18.2",
-    "zod": "^3.23.0",
-    "zustand": "^4.5.2"
+    "@auth/drizzle-adapter": "^0.3.15",
+    "@clerk/nextjs": "^4.29.4",
+    "@hookform/resolvers": "^3.3.4",
+    "@neondatabase/serverless": "^0.7.2",
+    "@paralleldrive/cuid2": "^2.2.2",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-query": "^5.17.15",
+    "@tanstack/react-query-devtools": "^5.17.18",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "dotenv": "^16.3.1",
+    "drizzle-orm": "^0.29.3",
+    "framer-motion": "^10.18.0",
+    "lucide-react": "^0.309.0",
+    "next": "14.0.4",
+    "next-auth": "^5.0.0-beta.4",
+    "next-safe-action": "^6.0.1",
+    "pg": "^8.11.3",
+    "postgres": "^3.4.3",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-hook-form": "^7.49.3",
+    "react-icons": "^5.0.1",
+    "svix": "^1.15.0",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.2.2",
-    "@commitlint/config-conventional": "^19.2.2",
-    "@t3-oss/env-nextjs": "^0.10.0",
-    "@tanstack/react-query-devtools": "^5.35.1",
-    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-    "@types/lodash": "^4.17.4",
-    "@types/node": "^20.14.2",
-    "@types/react": "^18.3.3",
-    "@types/react-big-calendar": "1.8.9",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "6.0.0",
-    "autoprefixer": "^10.4.19",
-    "commitizen": "^4.3.0",
-    "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.2",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-i18n-json": "^4.0.0",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-tailwindcss": "^3.15.1",
-    "husky": "^9.0.11",
-    "lint-staged": "^15.2.2",
-    "postcss": "^8.4.38",
-    "prettier": "^3.2.5",
-    "supabase": ">=1.8.1",
-    "tailwindcss": "^3.4.3",
-    "typescript": "5.1.3",
-    "typescript-eslint": "^7.7.0"
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "drizzle-kit": "^0.20.13",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.4",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
