--- a/package.json
+++ b/package.json
@@ -8,7 +8,14 @@
     "start": "next start",
     "lint": "next lint",
     "db:generate": "drizzle-kit generate:pg --config drizzle.config.ts",
-    "db:push": "drizzle-kit push:pg --config drizzle.config.ts"
+    "db:push": "drizzle-kit push:pg --config drizzle.config.ts",
+    "prepare": "husky",
+    "format": "prettier --write \"**/*.{js,ts,tsx,mdx}\" --cache",
+    "commit": "git-cz",
+    "check": "prettier --check \"**/*.{js,ts,tsx,mdx}\" --cache"
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^0.3.15",
@@ -43,6 +50,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -50,7 +58,10 @@
     "drizzle-kit": "^0.20.13",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.7",
     "postcss": "^8",
+    "prettier": "^3.3.2",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
