--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "@auth/drizzle-adapter": "^0.3.15",
     "@clerk/nextjs": "^4.29.4",
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "@hookform/resolvers": "^3.3.4",
     "@neondatabase/serverless": "^0.7.2",
     "@paralleldrive/cuid2": "^2.2.2",
