--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-hover-card": "^1.1.1",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.2.1",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@tanstack/react-query": "^5.17.15",
     "@tanstack/react-query-devtools": "^5.17.18",
     "class-variance-authority": "^0.7.0",
@@ -38,13 +40,14 @@
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.29.3",
     "framer-motion": "^10.18.0",
+    "input-otp": "^1.2.4",
     "lucide-react": "^0.309.0",
     "next": "14.0.4",
     "next-auth": "^5.0.0-beta.4",
     "next-safe-action": "^6.0.1",
     "pg": "^8.11.3",
     "postgres": "^3.4.3",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
