--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
-    "svix": "^1.15.0",
+    "svix": "1.24.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4",
