--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "framer-motion": "^10.18.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.309.0",
-    "next": "14.0.4",
+    "next": "^14.2.4",
     "next-auth": "^5.0.0-beta.4",
     "next-safe-action": "^6.0.1",
     "pg": "^8.11.3",
@@ -64,7 +64,6 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-    "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
