--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.309.0",
     "next": "^14.2.4",
-    "next-auth": "^5.0.0-beta.4",
+    "next-auth": "5.0.0-beta.20",
     "next-safe-action": "^6.0.1",
     "pg": "^8.11.3",
     "postgres": "^3.4.3",
