--- a/package.json
+++ b/package.json
@@ -53,8 +53,8 @@
     "next": "^14.2.4",
     "next-auth": "5.0.0-beta.20",
     "next-safe-action": "^6.0.1",
-    "pg": "^8.11.3",
-    "postgres": "^3.4.3",
+    "pg": "8.10.0",
+    "postgres": "3.3",
     "react": "^18.3.1",
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
