--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@tanstack/react-query-devtools": "^5.17.18",
     "@upstash/ratelimit": "^1.2.1",
     "@upstash/redis": "^1.31.6",
+    "@vercel/postgres": "^0.10.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "dotenv": "^16.3.1",
@@ -51,7 +52,7 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.309.0",
     "next": "^14.2.4",
-    "next-auth": "5.0.0-beta.20",
+    "next-auth": "^5.0.0-beta.21",
     "next-safe-action": "^6.0.1",
     "pg": "8.10.0",
     "postgres": "3.3",
