--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
+    "react-intersection-observer": "^9.13.1",
     "svix": "1.24.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
